# LabProg

./: CMakeLists.txt  Cell.cpp  Cell.h  MaxFormula.cpp  MaxFormula.h  MeanFormula.cpp  MeanFormula.h  MinFormula.cpp  MinFormula.h  MyApp.cpp  MyApp.h  MyFrame.cpp  MyFrame.h  Observer.cpp  Observer.h  README.md  Subject.cpp  Subject.h  SumFormula.cpp  SumFormula.h
googleTest/: CMakeLists.txt  CellTest.cpp  CellTest.h  FormulaTest.cpp  FormulaTest.h  runAllTest.cpp
googleTest/lib/googletest-master/docs/: advanced.md  faq.md  gmock_cheat_sheet.md  gmock_cook_book.md  gmock_faq.md  gmock_for_dummies.md  pkgconfig.md  primer.md
googleTest/lib/googletest-master/docs/_layouts/: default.html
googleTest/lib/googletest-master/docs/reference/: actions.md  assertions.md  matchers.md  mocking.md  testing.md
googleTest/lib/googletest-master/googlemock/: CMakeLists.txt  README.md
googleTest/lib/googletest-master/googlemock/cmake/: gmock.pc.in  gmock_main.pc.in
googleTest/lib/googletest-master/googlemock/src/: gmock-internal-utils.cc  gmock-spec-builders.cc  gmock.cc  gmock_main.cc
googleTest/lib/googletest-master/googlemock/test/: gmock-actions_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-spec-builders_test.cc  gmock_link_test.h  gmock_output_test_golden.txt  gmock_stress_test.cc  gmock_test_utils.py
googleTest/lib/googletest-master/googletest/cmake/: gtest.pc.in  gtest_main.pc.in  internal_utils.cmake
googleTest/lib/googletest-master/googletest/src/: gtest.cc  (+4 more)
(+44 files in other folders)
